--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -9,13 +9,15 @@
     {% block styles %}{% endblock %}
     {% block scripts %}{% endblock %}
 </head>
-<header>
-
-</header>
 <body>
-    {% block content %}{% endblock %}
+    <header contenteditable>
+    
+    </header>
+    <main contenteditable>
+        {% block content %}{% endblock %}
+    </main>
+    <footer contenteditable>
+        <p>Copyright Kyle Pannan {{ year }}©</p>
+    </footer>
 </body>
-<footer>
-    <p>Copyright Kyle Pannan {{ year }}©</p>
-</footer>
 </html>
