--- a/server/templates/info/index.html
+++ b/server/templates/info/index.html
@@ -3,6 +3,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+    <section class="grid-margins">
+        <div id="left-shoulder1"></div>
+        <div id="centre1">
+            <h1>Home</h1>
+            <p>Welcome to the home page!</p>
+        </div>
+        <div id="right-shoulder1"></div>
+    </section>
 {% endblock %}
