--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -6,18 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for("static", filename="css/_base.css") }}">
+    <script src="{{ url_for("static", filename="js/_base.js") }}"></script>
     {% block styles %}{% endblock %}
     {% block scripts %}{% endblock %}
 </head>
 <body>
-    <header contenteditable>
-    
+    <header>
+        <div id="header-left"></div>
+        <div id="header-centre">
+
+        </div>
+        <div id="header-right"></div>
     </header>
-    <main contenteditable>
+    <main>
         {% block content %}{% endblock %}
     </main>
-    <footer contenteditable>
-        <p>Copyright Kyle Pannan {{ year }}©</p>
+    <footer>
+        <div id="site-info">
+            <p>MIT Licensed; Kyle Pannan {{ year }}</p>
+        </div>
+        <img id="footer-logo" src="{{ url_for("static", filename="img/gov-logo.svg") }}" alt="QLD Government Logo">
     </footer>
 </body>
 </html>
