Updated info html

--- a/server/templates/info/about.html
+++ b/server/templates/info/about.html
@@ -3,6 +3,13 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-    <h1>About</h1>
-    <p>Welcome to the Alexandra Hills State High School Video Game Club site!</p>
+    <section class="grid-margins">
+        <div id="left"></div>
+        <div id="centre">
+            <h1>About</h1>
+            <p>Welcome to the Alexandra Hills State High School Video Game Club site!</p>
+        </div>
+        <div id="right"></div>
+    </section>
+
 {% endblock %}
