--- a/server/templates/info/index.html
+++ b/server/templates/info/index.html
@@ -4,11 +4,11 @@
 
 {% block content %}
     <section class="grid-margins">
-        <div id="left-shoulder1"></div>
-        <div id="centre1">
+        <div id="left"></div>
+        <div id="centre">
             <h1>Home</h1>
             <p>Welcome to the home page!</p>
         </div>
-        <div id="right-shoulder1"></div>
+        <div id="right"></div>
     </section>
 {% endblock %}
