--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -11,10 +11,20 @@
     {% block scripts %}{% endblock %}
 </head>
 <body>
-    <header>
+    <header class="grid-margins">
         <div id="header-left"></div>
         <div id="header-centre">
-
+            <nav>
+                <div id="home">
+                    <a href="{{ url_for("info.index") }}">Home</a>
+                </div>
+                <div id="about">
+                    <a href="{{ url_for("info.about") }}">About</a>
+                </div>
+                <div id="tests">
+                    <a href="{{ url_for("tests.index") }}">Tests</a>
+                </div>
+            </nav>
         </div>
         <div id="header-right"></div>
     </header>
