--- a/server/templates/tests/index.html
+++ b/server/templates/tests/index.html
@@ -3,13 +3,17 @@
 {% block title %}Tests{% endblock %}
 
 {% block content %}
-    <section id="main">
+    <section id="main" class="grid-margins">
         <div id="left"></div>
-        <div id="centre" class="gallery">
-            <div class="gallery-item" id="creator">
-                <a href="{{ url_for("tests.creator") }}">
-                    <h2>Creator</h2>
-                </a>
+        <div id="centre">
+            <h1>Available Testing Endpoints</h1>
+            <div class="gallery">
+                <div class="gallery-item" id="creator">
+                    <a href="{{ url_for("tests.creator") }}">
+                        <h2>Creator</h2>
+                    </a>
+                </div>
+
             </div>
         </div>
         <div id="right"></div>
