--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -1,14 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=JetBrains Mono");
 
 :root {
     --primary-background: #ffffff;
     --secondary-background: #f1f1f1;
+    --code-normal: #cccccc;
+    --code-yellow: #f5d342;
     --yellow-1: #dbb700;
     --yellow-2: #ccaa00;
     --text-black: #000000;
     --text-white: #ffffff;
     --green-1: #034320;
     font-family: "Open Sans", sans-serif;
+}
+
+/* Background Colour Classes */
+.bg-primary {
+    background-color: var(--primary-background);
+}
+
+.bg-secondary {
+    background-color: var(--secondary-background);
+}
+
+.bg-yellow-1 {
+    background-color: var(--yellow-1);
+}
+
+.bg-yellow-2 {
+    background-color: var(--yellow-2);
+}
+
+.bg-green-1 {
+    background-color: var(--green-1);
 }
 
 body {
@@ -66,6 +90,14 @@ footer img {
 
 main {
     flex: 1;
+}
+
+code, pre {
+    background-color: var(--code-normal);
+    border-radius: 5px;
+    padding: 0.2em;
+    font-family: "JetBrains Mono", monospace;
+    font-size: small;
 }
 
 .gallery {
