More work done on frontend

--- a/server/templates/tests/creator.html
+++ b/server/templates/tests/creator.html
@@ -7,7 +7,8 @@
 {% endblock %}
 
 {% block scripts %}
-<script defer src="{{ url_for("static", filename="js/tests/creator.js") }}"></script>
+    <script defer src="{{ url_for("static", filename="js/tests/creator.js") }}"></script>
+    <script defer src="https://cdn.jsdelivr.net/gh/pgrabovets/json-view@master/dist/jsonview.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -16,7 +17,8 @@
         <div id="centre">
             <h1>Creator Tests</h1>
             <p>Test <code>creator</code> endpoints.</p>
-            <div>
+            <div id="tests">
+            <!-- TODO: Create two separate testing dropdowns for direct-to-api tests and API wrapper testing -->
                 <div id="direct-api-tests" class="tests-group">
                     <h2>Direct API Tests</h2>
                     <div id="get-list" class="test">
@@ -30,20 +32,41 @@
                                 </div>
                                 <div>
                                     <label for="all-page-size">Page Size (<code>page_size</code>)</label>
-                                    <input type="number" id="all-page-size" name="all-page-size" value="10" min="1" max="40"><br>
+                                    <input type="number" id="all-page-size" name="all-page-size" value="5" min="1" max="40"><br>
                                 </div>
-                            <button id="get-list-button" onclick="getAll();">Test</button>
+                            <button id="get-list-button" onclick="getAll();">Run Test</button>
                             </div>
                         </div>
                         <div>
                             <h4>Response</h4>
-                            <pre id="get-list-response"></pre>
+                            <div id="get-list-response"></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="api-class-tests" class="tests-group">
+                    <h2>API Class Tests</h2>
+                    <div id="get-list-class" class="test">
+                        <div>
+                            <h3>Get List</h3>
+                            <p>Get a list of all the creators.</p>
+                            <div>
+                                <div>
+                                    <label for="all-page">Page Number (<code>page</code>)</label>
+                                    <input type="number" id="all-page" name="all-page" value="1" min="1"><br>
+                                </div>
+                                <div>
+                                    <label for="all-page-size">Page Size (<code>page_size</code>)</label>
+                                    <input type="number" id="all-page-size" name="all-page-size" value="5" min="1" max="40"><br>
+                                </div>
+                            </div>
+                            <button id="get-list-class-button" onclick="getAllClass();">Run Test</button>
+                        </div>
+                        <div>
+
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-- TODO: Create two separate testing dropdowns for direct-to-api tests and API wrapper testing -->
-
         </div>
         <div id="right"></div>
     </section>
