--- a/server/static/css/tests.css
+++ b/server/static/css/tests.css
@@ -14,6 +14,8 @@
     padding: 0.3em 1em 1em;
     outline: none;
     background-color: var(--yellow-1);
+    max-height: 200vh;
+    overflow: scroll;
 }
 
 .test code, pre {
