Modified the styling and content of the error page

--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -124,3 +124,7 @@ code, pre {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;  /* 3 columns, left and right are for shoulder space, middle is main */
 }
+
+.centre {
+    text-align: center;
+}
