--- a/server/templates/error.html
+++ b/server/templates/error.html
@@ -5,9 +5,9 @@
 {% block content %}
     <section id="main" class="grid-margins">
         <div id="left"></div>
-        <div id="centre">
+        <div id="centre" class="centre">
             <h1>Error {{ error.code }}</h1>
-            <p>{{ error.message }}</p>
+            <p>{{ error.description }}</p>
         </div>
         <div id="right"></div>
     </section>
