--- a/server/templates/tests/creator.html
+++ b/server/templates/tests/creator.html
@@ -37,10 +37,11 @@
                                 <button id="get-list-button" onclick="getAll();">Run Test</button>
                             </div>
                         </div>
-                        <div>
-                            <h4>Response</h4>
-                            <div id="get-list-response"></div>
+                        <div class="horizontal-list">
+                            <h4>Response</h4><button onclick="expandAll('get-list-response-data');">Expand all content</button>
+
                         </div>
+                        <div id="get-list-response"></div>
                     </div>
                     <div id="get-details" class="test">
                         <div>
