--- a/server/static/css/tests.css
+++ b/server/static/css/tests.css
@@ -29,3 +29,30 @@
     display: flex;
     flex-direction: column;
 }
+
+.result {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.5em 0;
+    width: 100%;
+    background-color: var(--yellow-2);
+}
+
+.result a {
+    color: black;
+    text-decoration: none;
+    margin-left: 6vw;
+}
+
+.result .creator {
+    display: inline-grid;
+    align-items: center;
+    overflow-x: hidden;
+    padding-left: 6vw;
+}
+
+.result .creator img {
+    max-height: 20vh;
+    margin-right: 0.5em;
+}
