--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -43,7 +43,7 @@ body {
 }
 
 header {
-    min-height: 12vh;
+    min-height: 8vh;
     background: var(--green-1);
 }
 
@@ -66,16 +66,19 @@ header nav div a {
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    gap: 4em;
     background: var(--yellow-1);
     text-align: center;
     padding: 2em 0;  /* top right bottom left */
-
-    max-height: max-content;
+    max-height: min-content;
 }
 
 footer #site-info {
-    margin-top: 0.6vh;
-    margin-bottom: 0.2vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-size: 1.2em;
     font-weight: bold;
 }
