--- a/server/templates/_base.html
+++ b/server/templates/_base.html
@@ -18,13 +18,16 @@
         <div id="header-left"></div>
         <div id="header-centre">
             <nav>
-                <div id="home">
+                <div>
                     <a href="{{ url_for("info.index") }}">Home</a>
                 </div>
-                <div id="about">
+                <div>
+                    <a href="{{ url_for("games.index") }}">Games</a>
+                </div>
+                <div>
                     <a href="{{ url_for("info.about") }}">About</a>
                 </div>
-                <div id="tests">
+                <div>
                     <a href="{{ url_for("tests.index") }}">Tests</a>
                 </div>
             </nav>
