Added all tests to the tests endpoint

--- a/server/templates/tests/index.html
+++ b/server/templates/tests/index.html
@@ -13,7 +13,36 @@
                         <h2>Creator</h2>
                     </a>
                 </div>
-
+                <div class="gallery-item" id="developer">
+                    <a href="{{ url_for("tests.developer") }}">
+                        <h2>Developer</h2>
+                    </a>
+                </div>
+                <div class="gallery-item" id="game">
+                    <a href="{{ url_for("tests.game") }}">
+                        <h2>Game</h2>
+                    </a>
+                </div>
+                <div class="gallery-item" id="platform">
+                    <a href="{{ url_for("tests.platform") }}">
+                        <h2>Platform</h2>
+                    </a>
+                </div>
+                <div class="gallery-item" id="publisher">
+                    <a href="{{ url_for("tests.publisher") }}">
+                        <h2>Publisher</h2>
+                    </a>
+                </div>
+                <div class="gallery-item" id="store">
+                    <a href="{{ url_for("tests.store") }}">
+                        <h2>Store</h2>
+                    </a>
+                </div>
+                <div class="gallery-item" id="tag">
+                    <a href="{{ url_for("tests.tag") }}">
+                        <h2>Tag</h2>
+                    </a>
+                </div>
             </div>
         </div>
         <div id="right"></div>
