Added a nice transition for colours

--- a/server/static/css/_base.css
+++ b/server/static/css/_base.css
@@ -5,6 +5,7 @@
     font-family: "Open Sans", sans-serif;
     background-color: var(--primary-background);
     color: var(--text-primary);
+    transition: background-color 0.3s, color 0.3s;
 }
 
 /* Background Colour Classes */
