--- a/server/static/css/tests.css
+++ b/server/static/css/tests.css
@@ -18,7 +18,6 @@
     overflow: scroll;
     overflow-x: hidden;
     margin-bottom: 2vh;
-    /* Hide the scrollbar */
     scrollbar-width: none;
 }
 
@@ -57,4 +56,29 @@
 .result .creator img {
     max-height: 20vh;
     margin-right: 0.5em;
+}
+
+.class-test-group {
+
+}
+
+.grid {
+    display: grid;
+    grid-gap: 6em;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.class-test {
+    position: relative;
+    display: inline-grid;
+    width: 100%;
+    border-radius: 10px;
+    padding: 0.3em 1em 1em;
+    outline: none;
+    background-color: var(--yellow-1);
+    max-height: 50vh;
+    overflow: scroll;
+    overflow-x: hidden;
+    margin-bottom: 2vh;
+    scrollbar-width: none;
 }
