--- a/server/templates/tests/creator/index.html
+++ b/server/templates/tests/creator/index.html
@@ -1,104 +1,82 @@
-{% extends "_base.html" %}
+{% extends "tests/_tests_base.html" %}
 
-{% block title %}Creator Tests{% endblock %}
 
-{% block styles %}
-    <link rel="stylesheet" href="{{ url_for("static", filename="css/tests.css") }}">
-{% endblock %}
 
 {% block scripts %}
-    <script defer src="{{ url_for("static", filename="js/tests/utils.js") }}"></script>
+    {{ super() }}
     <script defer src="{{ url_for("static", filename="js/tests/creator.js") }}"></script>
-    <script defer src="https://cdn.jsdelivr.net/gh/pgrabovets/json-view@master/dist/jsonview.js"></script>
 {% endblock %}
 
-{% block content %}
-    <section id="main" class="grid-margins">
-        <div id="left"></div>
-        <div id="centre">
-            <h1>Creator Tests</h1>
-            <p>Test <code>creator</code> endpoints.</p>
-            {% if error %}
-                <h2>An error occurred:</h2>
-                <div class="error">{{ error }}</div>
-            {% endif %}
-            <div id="tests">
-                <div id="direct-api-tests" class="tests-group">
-                    <h2>Direct API Tests</h2>
-                    <div id="get-list" class="test">
-                        <div>
-                            <h3>Get List</h3>
-                            <p>Get a list of all the creators.</p>
-                            <div>
-                                <div>
-                                    <label for="list-page">Page Number (<code>page</code>)</label>
-                                    <input type="number" id="list-page" name="list-page" value="1" min="1"><br>
-                                </div>
-                                <div>
-                                    <label for="list-page-size">Page Size (<code>page_size</code>)</label>
-                                    <input type="number" id="list-page-size" name="list-page-size" value="5" min="1" max="25"><br>
-                                </div>
-                                <button id="get-list-button" onclick="getList();">Run Test</button>
-                            </div>
-                        </div>
-                        <div class="horizontal-list">
-                            <h4>Response</h4>
-                            <div id="get-list-response"></div>
-                        </div>
-                    </div>
-                    <div id="get-details" class="test">
-                        <div>
-                            <h3>Get Details</h3>
-                            <p>Get details of one specific creator.</p>
-                            <div>
-                                <div class="parameter">
-                                    <label for="details-id">Creator Id (<code>id</code>)</label>
-                                    <input type="text" id="details-id" name="details-id"><br>
-                                </div>
-                                <button id="get-list-button" onclick="getDetails();">Run Test</button>
-                            </div>
-                        </div>
-                        <div>
-                            <h4>Response</h4>
-                            <div id="get-details-response"></div>
-                        </div>
-                    </div>
+{% block apiTests %}
+    <div id="get-list" class="test">
+        <div>
+            <h3>Get List</h3>
+            <p>Get a list of all the creators.</p>
+            <div>
+                <div>
+                    <label for="list-page">Page Number (<code>page</code>)</label>
+                    <input type="number" id="list-page" name="list-page" value="1" min="1"><br>
                 </div>
-                <div id="api-class-tests" class="tests-group">
-                    <h2>API Class Tests</h2>
-                    <div id="get-list-class" class="test">
-                        <div>
-                            <h3>Get List</h3>
-                            <p>Get a list of all the creators.</p>
-                            <div>
-                                <div>
-                                    <label for="all-page-class">Page Number (<code>page</code>)</label>
-                                    <input type="number" id="all-page-class" name="all-page-class" value="1" min="1"><br>
-                                </div>
-                                <div>
-                                    <label for="all-page-size-class">Page Size (<code>page_size</code>)</label>
-                                    <input type="number" id="all-page-size-class" name="all-page-size-class" value="5" min="1" max="25"><br>
-                                </div>
-                            </div>
-                            <button id="get-list-class-button" onclick="getListClass();">Run Test</button>
-                        </div>
-                    </div>
-                    <div id="get-details" class="test">
-                        <div>
-                            <h3>Get Details</h3>
-                            <p>Get details of one specific creator.</p>
-                            <div>
-                                <div class="parameter">
-                                    <label for="details-id-class">Creator Id (<code>id</code>)</label>
-                                    <input type="text" id="details-id-class" name="details-id-class"><br>
-                                </div>
-                                <button id="get-list-button-class" onclick="getDetailsClass();">Run Test</button>
-                            </div>
-                        </div>
-                    </div>
+                <div>
+                    <label for="list-page-size">Page Size (<code>page_size</code>)</label>
+                    <input type="number" id="list-page-size" name="list-page-size" value="5" min="1" max="25"><br>
                 </div>
+                <button id="get-list-button" onclick="getList();">Run Test</button>
             </div>
         </div>
-        <div id="right"></div>
-    </section>
+        <div class="horizontal-list">
+            <h4>Response</h4>
+            <div id="get-list-response"></div>
+        </div>
+    </div>
+    <div id="get-details" class="test">
+        <div>
+            <h3>Get Details</h3>
+            <p>Get details of one specific creator.</p>
+            <div>
+                <div class="parameter">
+                    <label for="details-id">Creator Id (<code>id</code>)</label>
+                    <input type="text" id="details-id" name="details-id"><br>
+                </div>
+                <button id="get-list-button" onclick="getDetails();">Run Test</button>
+            </div>
+        </div>
+        <div>
+            <h4>Response</h4>
+            <div id="get-details-response"></div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block classTests %}
+    <div id="get-list-class" class="class-test black-text">
+        <div>
+            <h3>Get List</h3>
+            <p>Get a list of all the creators.</p>
+            <div>
+                <div>
+                    <label for="all-page-class">Page Number (<code>page</code>)</label>
+                    <input type="number" id="all-page-class" name="all-page-class" value="1" min="1"><br>
+                </div>
+                <div>
+                    <label for="all-page-size-class">Page Size (<code>page_size</code>)</label>
+                    <input type="number" id="all-page-size-class" name="all-page-size-class" value="5" min="1" max="25"><br>
+                </div>
+            </div>
+            <button id="get-list-class-button" onclick="getListClass();">Run Test</button>
+        </div>
+    </div>
+    <div id="get-details" class="class-test black-text">
+        <div>
+            <h3>Get Details</h3>
+            <p>Get details of one specific creator.</p>
+            <div>
+                <div class="parameter">
+                    <label for="details-id-class">Creator Id (<code>id</code>)</label>
+                    <input type="text" id="details-id-class" name="details-id-class"><br>
+                </div>
+                <button id="get-list-button-class" onclick="getDetailsClass();">Run Test</button>
+            </div>
+        </div>
+    </div>
 {% endblock %}
