--- a/server/templates/tests/creator/index.html
+++ b/server/templates/tests/creator/index.html
@@ -1,14 +1,12 @@
 {% extends "tests/_tests_base.html" %}
 
-
-
 {% block scripts %}
     {{ super() }}
     <script defer src="{{ url_for("static", filename="js/tests/creator.js") }}"></script>
 {% endblock %}
 
 {% block apiTests %}
-    <div id="get-list" class="test">
+    <div id="get-list" class="test test-colours">
         <div>
             <h3>Get List</h3>
             <p>Get a list of all the creators.</p>
@@ -29,7 +27,7 @@
             <div id="get-list-response"></div>
         </div>
     </div>
-    <div id="get-details" class="test">
+    <div id="get-details" class="test test-colours">
         <div>
             <h3>Get Details</h3>
             <p>Get details of one specific creator.</p>
@@ -49,7 +47,7 @@
 {% endblock %}
 
 {% block classTests %}
-    <div id="get-list-class" class="class-test black-text">
+    <div id="get-list-class" class="class-test test-colours">
         <div>
             <h3>Get List</h3>
             <p>Get a list of all the creators.</p>
@@ -66,7 +64,7 @@
             <button id="get-list-class-button" onclick="getListClass();">Run Test</button>
         </div>
     </div>
-    <div id="get-details" class="class-test black-text">
+    <div id="get-details" class="class-test test-colours">
         <div>
             <h3>Get Details</h3>
             <p>Get details of one specific creator.</p>
