Added forgotten test end point `tests.genre` to list

--- a/server/templates/tests/index.html
+++ b/server/templates/tests/index.html
@@ -23,6 +23,11 @@
                         <h2>Game</h2>
                     </a>
                 </div>
+                <div class="gallery-item" id="genre">
+                    <a href="{{ url_for("tests.genre") }}">
+                        <h2>Genre</h2>
+                    </a>
+                </div>
                 <div class="gallery-item" id="platform">
                     <a href="{{ url_for("tests.platform") }}">
                         <h2>Platform</h2>
